--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -108,7 +108,7 @@
 						<section id="two" class="wrapper alt style2">
 							<div class="inner">
 								<h3>Korai minimumelvek</h3>
-								<p>
+								<p style="text-align: justify;">
 									A kérdés már csak az, hogy mi is ez az $\mathcal{S}$ hatás.
 									Először néhány történelmi példával kezdünk, és megbarátkozunk a minimalizálásával.
 									Az előadáson hallhattunk két fontos elvet:
@@ -130,14 +130,14 @@
 								<h3>
 									1.1 példa: Úttörés részecskére
 								</h3>
-								<p>
+								<p style="text-align: justify;">
 									Van egy tömegpontunk (mondjuk egy elektron) ami kezdetben szabadon mozog egyenes vonalban, egyenletes sebességgel.
 									Az $x$ tengelyt elérve viszont azt tapasztalja, hogy lecsökken a potenciális energiája: a negatív tartományban a fentihez képest egy konstans $-U$ potenciál tölti ki a teret.
 								</p>
 								<h4>
 									1.1.1. Mi történik a részecske pályájával?
 								</h4>
-								<p>
+								<p style="text-align: justify;">
 									Ezt a feladatot kicsit macerás megoldani a Newton törvényekkel, szóval azt későbbre hagyjuk.
 									Használjuk helyette a Maupertuis elvet, illetve az energiamegmaradást, felírva a tengelyen áthaladás előtti és utáni pillanatokra:
 									$$
@@ -151,7 +151,7 @@
 									$$
 									A pontos alak most annyira nem is fontos, a lényeg az, hogy ez konstans fent is és lent is (még ha nem is ugyanaz a konstans).
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									A hatás felírásához szükség lesz még a megtett utakra, amiket valahogy paraméterezni kell egy koordinátarendszerben.
 									Legyen az Origó a kiindulási $P_1$ pont $x$ tengelyre vetett képe, a tengelyen áthaladás pontját pedig vegyük fel valamilyen $x$ pontban, amire végső soron kíváncsiak vagyunk.
 									Két szöget is be tudunk rajzolni, ezek mindjárt hasznosak is lesznek.
@@ -159,7 +159,7 @@
 								<div style="text-align: center;">
 									<img src="figs/lesson1/fermat.png" alt="Törés paraméterezése" width="55%">
 								</div>
-								<p>
+								<p style="text-align: justify;">
 									A hatásunk egy út szerinti integrál: bontsuk fel ketté.
 									$$
 									\begin{aligned}
@@ -194,7 +194,7 @@
 									\end{aligned}
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Ezzel meg is oldottuk a feladatot: a potenciális energia ugrása pont olyan hatással van a részecskére, mint a törésmutató ugrása a fényre.
 									Ha magukat a sebességeket nem ismerjük, csak a potenciált és a kimenő sebességet 
 									(ami gyakori, ha például egy laborban mi magunk rakjuk oda a potenciális energiát, és detektáljuk a kijövő részecskét), 
@@ -206,7 +206,7 @@
 									$$
 								</p>
 								<h4>1.1.2. Hová lett a lendületmegmaradás?</h4>
-								<p>
+								<p style="text-align: justify;">
 									Már az energiamegmaradás első felírt sorában láthattuk, hogy a lendület itt gyanúsan nem marad meg.
 									Hogy ezt kicsit jobban kivesézzük, bontsuk fel a lendületeket komponensekre $\vec{p} = (p_x, p_y)$ módon, és nézzük meg az $x$ irányúakat:
 									$$
@@ -225,7 +225,7 @@
 									Ha arra merőlegesen tolnánk el, akkor viszont beleütközhetünk a falba, amin túl már nem ugyanarról a fizikai problémáról beszélünk.
 								</p>
 								<h4>1.1.3. Newtonos megoldás</h4>
-								<p>
+								<p style="text-align: justify;">
 									A feladat régimódibb megoldásához kis trükközésre van szükség.
 									Végső célunk megoldani a Newton-egyenletet, ami az energiamegmaradásnak hála
 									$$
@@ -242,7 +242,7 @@
 									Ami nem folytonos, ezért deriválni sem lehet szépen disztribúcióelmélet nélkül.
 									Ha éppen nem jut eszünkbe, hogy az alapján ennek pont egy Dirac-delta a deriváltja, akkor a következő trükköket lehet bevetni.
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									A lépcsőfüggvény sokféleképpen közelíthető.
 									Egyik mód például a
 									$$
@@ -303,7 +303,7 @@
 						<section id="three" class="wrapper style3">
 							<div class="inner">
 								<h3>1.2 példa: Legnagyobb (?) hatás elve</h3>
-								<p>
+								<p style="text-align: justify;">
 									Nézzünk egy példát a fényre is.
 									A Fermat elv szerint a fény a legrövidebb időbe kerülő úton közlekedik, tehát az a pálya valósul meg, amelynek mentén a megtett idő minimális.
 									$$
@@ -313,7 +313,7 @@
 									$$
 									Most bebizonyítjuk, hogy ez így nem igaz, egy görbe tükör segítségével.
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Vegyük az kezdeti $A$ és a  végződő $B$ pontokat egy félgömb alakú tükör két végében.
 									Természetesen a legrövidebb út köztük az egyenes, de optikából tudjuk, hogy a fény tud másmerre is menni: tükröződve.
 									Vegyük fel valahol a köztes $P$ pontunkat a köríven, és paraméterezzük az ábrán látható szöggel.
@@ -321,7 +321,7 @@
 								<div style="text-align: center;">
 									<img src="figs/lesson1/fermat_gorbe.png" alt="Görbe törés paraméterezése" width="55%">
 								</div>
-								<p>
+								<p style="text-align: justify;">
 									Kis geometria után 
 									(Egyenlő $R$ szárú háromszögeink vannak, amiket meg tudunk felezni.
 									A szárszöget a $\theta$ paraméterünkből és a 90 fokból tudjuk kikombinálni, ami után egy szinusz felismerése a feladat.) 
@@ -352,7 +352,7 @@
 									\end{aligned}
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Minden esetre a megoldásaink:
 									$$
 									\begin{aligned}
@@ -361,7 +361,7 @@
 									$$
 									Nekünk ezek közül $\theta=0$ lesz az fontos, minden más ugyanazt jelenti.
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Érdekes dolgot figyelhetünk meg viszont, ha megnézzük az időtartam <i>második</i> deriváltját is a minimumban.
 									$$
 									\begin{aligned}
@@ -373,12 +373,12 @@
 									Visszaidézve a korábbi matekos tudásunkat, ez azt jelenti, hogy a megvalósuló pályánk nem is egy minimumhoz köthető.
 									Pont ellenkezőleg, egy lokális maximumhoz tartozó pályát követ ezesetben a fény.
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Éppen ezért, most is és a jövőben is, bármikor, ha a <i>legkisebb</i> hatás elvét emlegeti valaki, akkor az általában csak egy megszokott elnevezés.
 									Valójában inkább a <i>szélsőértékes</i> hatás elvére gondolunk, de az sokkal csúnyábban hangzik mind magyarul, mind angolul.
 									(A pontosságra törekedőknek a \textit{stacionárius} a bevett szó.)
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Feltűnhetett, hogy mindkét példában az integrálás igazból egy-egy egyenes hosszának kiszámolására redukálódott.
 									Ez csak didaktikus, és mutatja a Maupertuis elv hátrányát: mást nem igazán tudtunk volna kiszámolni.
 									A probléma az integrálással van, hiszen azt nem mindig lehet elvégezni; és itt az integrálás \textbf{után} szelektáljuk ki az összes lehetséges útból az igazit.
@@ -389,7 +389,7 @@
 						<section id="four" class="wrapper style4">
 							<div class="inner">
 								<h3>A Lagrange formalizmus</h3>
-								<p>
+								<p style="text-align: justify;">
 									Felidézve, hogy a hatástól megköveteljük, hogy stacionárius legyen:
 									$$
 									\begin{aligned}
@@ -414,12 +414,12 @@
 									Nézzünk először pár példát az utóbbira.
 								</p>
 								<h3>1.3 példa: Eukleidész</h3>
-								<p>
+								<p style="text-align: justify;">
 									Az első kérdés amit segít megválaszolni a variációszámítás a következő:
-								<p>
+								</p>
 								<p style="text-align: center"><i>Mi a legrövidebb út két pont között?</i></p>
 								<h4>1.3.1 Paraméterezés</h4>
-								<p>
+								<p style="text-align: justify;">
 									Próbáljunk meg elvonatkoztatni attól, hogy tudjuk a választ (egyenes).
 									Ha ez megvolt, akkor rajzoljunk le valami általános görbét $A$ és $B$ pontok közt, ahogy azt az ábrán láthatjuk.
 									Végső soron arra leszünk kíváncsiak, hogy ennek a görbének a hossza mikor lesz minimális: tehát számunkra ő most az $\mathcal{S}$ hatás.
@@ -433,7 +433,7 @@
 								<div style="text-align: center;">
 									<img src="figs/lesson1/euclides.png" alt="Út két pont között" width="55%">
 								</div>
-								<p>
+								<p style="text-align: justify;">
 									Amivel meg is van a feladat filozofálósabb része.
 									Ami marad az az, hogy hogyan kell ezt az integrálást elvégezni: mik is a határok, és hogy függ tőlük az ívelem.
 									Descartes-i koordinátákban dolgozva általánosan is igaz, hogy két pont közt a távolság $s^2 = x^2 + y^2$.
@@ -458,7 +458,7 @@
 									$$
 								</p>
 								<h4>1.3.2 Variáció</h4>
-								<p>
+								<p style="text-align: justify;">
 									Megtaláltuk tehát, hogy mi az a Lagrange-függvény ami ezt a problémát írja le:
 									$$
 									\begin{aligned}
@@ -482,7 +482,7 @@
 									$$
 								</p>
 								<h4>1.3.3 A mozgásegyenlet megoldása</h4>
-								<p>
+								<p style="text-align: justify;">
 									Kaptunk egy szép másodrendű differenciálegyenletet a "mozgásra".
 									Kicsit nézegetve ez kétféleképpen teljesülhet: egyrészt lehet a zárójel nulla
 									$$
@@ -503,7 +503,7 @@
 									az egyenes.
 								</p>
 								<h4>1.3.4 A szebb megoldás</h4>
-								<p>
+								<p style="text-align: justify;">
 									Ehelyett, vegyük észre hogy az Euler-Lagrange egyenlet jobb oldala nulla:
 									$$
 									\begin{aligned}
@@ -538,7 +538,7 @@
 						<section id="five" class="wrapper style5">
 							<div class="inner">
 								<h3>1.4 példa: Brachisztokron</h3>
-								<p>
+								<p style="text-align: justify;">
 									Egy egészen hasonló, de történelmi jelentősségű példát kapunk, ha kicsit módosítunk az előző feladaton.
 									Az alapkérdésünk most az, hogy (homogén) gravitációs térben milyen görbe az, amin legurulva a legkevesebb időbe telik az út $A$ és $B$ között.
 									A legkevesebb időre törekszünk, tehát ami minimalizálandó az
@@ -567,7 +567,7 @@
 									$$
 									Erre kell most alkalmaznunk az Euler-Lagrange formulát, ügyelve arra hogy most $x$ és $y$ kicserélődtek.
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Az integrál előtti szorzófaktorokat elhagyva a deriváltak:
 									$$
 									\begin{aligned}
@@ -595,7 +595,7 @@
 									    x = \int \sqrt{\frac{y}{2a-y}}\, \rd y
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Hogy ezt megoldjuk, megsejtjük a jó $y\rightarrow \varphi$ változócserét a tankönyv segítségével, mint
 									$$
 										y = a(1-\cos{\varphi})
@@ -626,7 +626,7 @@
 									    x = a \int (1-\cos{\varphi}) \rd \varphi = a \left( \varphi - \sin{\varphi} \right) + \text{konst.}
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Innentől a pontos megoldás már csak kezdeti értékek kérdése.
 									Legyenek ők $x_A = y_A = 0$, amikből $\varphi = 0$ következik, illetve a konstansunk is nulla lesz.
 									A megoldásunk tehát a görbére:
@@ -645,10 +645,10 @@
 								</p>
 							</div>
 						</section>
-						<section id="six" class="wrapper style6">
+						<section id="six" class="wrapper style3">
 							<div class="inner">
-								<h3>példa: Gömbszimmetrikus törésmutató</h3>
-								<p>
+								<h3>1.5. példa: Gömbszimmetrikus törésmutató</h3>
+								<p style="text-align: justify;">
 									Kicsit közelebb kerülve a fizikához, most a két pont között utazzon valami létező dolog is: a fény.
 									A megszokott koordinátarendszertől cserébe távolodjunk, most vegyünk egy közeget, ahol a törésmutató
 									$$
@@ -671,7 +671,7 @@
 									    \mathcal{S} = n_0 R \int_{\varphi_A}^{\varphi_B} \frac{\sqrt{r^{\prime 2}  + r^2}}{r} \rd \varphi
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Felismerve a Lagrange-függvényt,  és kicsit átírva:
 									$$
 									    \mathcal{L} =  \frac{\sqrt{r^{\prime 2}  + r^2}}{r} = \sqrt{1 + \frac{r^{\prime 2}}{r^2}}
@@ -709,7 +709,7 @@
 									\end{aligned}
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Kis átalakítással
 									$$
 									    r^{\prime\prime} r - r^{\prime 2}  - \frac{r r^\prime r^{\prime\prime} - r^{\prime3}}{1 + \frac{r^{\prime 2}}{r^2}} = \left(r^{\prime\prime} r - r^{\prime 2}\right) \left(1- \frac{r^{\prime 2}}{r^2 + r^{\prime 2}}\right) = 0
@@ -736,7 +736,7 @@
 									\end{aligned}
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Nem baj, ha ezt még nem látjuk mi lesz. A jobb oldal minden esetre egészen szép, szóval vezessünk be egy új $u$ függvényt, mint
 									$$
 									    u(\varphi) = \frac{r^\prime}{r}
@@ -758,7 +758,7 @@
 									\end{aligned}
 									$$
 								</p>
-								<p>
+								<p style="text-align: justify;">
 									Ezt láthatólag nem volt könnyű megoldani.
 									Itt bukik elő a variációszámítás egyik hátránya: attól, hogy könnyen fel tudjuk írni a mozgásegyenletet, nem biztos, hogy azt egyszerűen (vagy egyáltalán) meg is tudjuk oldani.
 									A következő órákon erre a feladatra látni fogunk majd egy kevésbé favágó módszert, ami (mint a legtöbb szép megoldás a fizikában) a szimmetriákra alapul.
