--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -143,7 +143,7 @@
 										<li>Második ZH (12.01.)</li>
 										<li>Utolsó óra (12.08.)</li>
 									</ul>
-									<p>A tavalyi összesített jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/elmecha/elmecha_jegyzet_2024.pdf" download="elmecha_jegyzet_2024.pdf" class="button icon solid fa-download align-right">elmecha_jegyzet_2024.pdf</a></p>
+									<p>A tavalyi összesített (és helyenként hibás) jegyzet elérhető itt:&nbsp;&nbsp;&nbsp;&nbsp; <a href="../teaching/elmecha/elmecha_jegyzet_2024.pdf" download="elmecha_jegyzet_2024.pdf" class="button icon solid fa-download align-right">elmecha_jegyzet_2024.pdf</a></p>
 									</section>
 
 								</div>
