--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -71,7 +71,7 @@
 						<section id="one" class="wrapper alt style3">
 							<div class="inner">
 								<h2 class="major">
-									1. óra
+									1. óra &nbsp;&nbsp;&nbsp;&nbsp; <a href="01_ora.pdf" download="01_ora.pdf" class="button icon solid fa-download align-right">Letöltés</a>
 								</h2>
 								<h3>Hatáselvek</h3>
 	
