--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -60,7 +60,7 @@
 											<summary>A jegyszerzésről:</summary>
 											<ul>
 											    <li>A gyakorlatra és az előadásra egy közös jegy jár, ennek 2/3 része az előadásból, 1/3 része a gyakból tevódik ki. Elégtelen gyakorlati jegy esetén nincs lehetőség az előadásból vizsgatételre.</li>
-											    <li>A gyakon belül lesz 2 ZH és 2 beadandó, illetve opcionális szorgalmi feladatok. Egy-egy ZH vagy beadandó rendre 50 pontot ér.</li>
+											    <li>A gyakon belül lesz 2 ZH, 2 beadandó illetve 2 opcionális szorgalmi feladatsor. Egy-egy ZH vagy beadandó rendre $50$ pontot ér, a szorgalmik pedig 15-15 pontosra vannak tervezve.</li>
 											    <li>A gyakorlati jegyek a következőképp adódnak a pontokból:</li>
 										    </ul>
 											<table>
@@ -123,7 +123,7 @@
 										<!--
 										<li><a href="../teaching/elmecha/ora1.html">Óra (09.15.) - Variáció</a></li>
 										-->
-										<li>Óra (09.15.)</li>
+										<li><a href="ora1.html">Óra (09.15.)</a></li>
 										<li>Óra (09.22.)</li>
 										<li>Óra (09.29.)</li>
 										<li>Óra (10.06.)</li>
