--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -123,7 +123,7 @@
 										<!--
 										<li><a href="../teaching/elmecha/ora1.html">Óra (09.15.) - Variáció</a></li>
 										-->
-										<li><a href="emlecha/ora1.html">Óra (09.15.)</a></li>
+										<li><a href="elmecha/ora1.html">Óra (09.15.)</a></li>
 										<li>Óra (09.22.)</li>
 										<li>Óra (09.29.)</li>
 										<li>Óra (10.06.)</li>
