--- a/teaching/elmecha/ora1.html
+++ b/teaching/elmecha/ora1.html
@@ -376,12 +376,12 @@
 								<p style="text-align: justify;">
 									Éppen ezért, most is és a jövőben is, bármikor, ha a <i>legkisebb</i> hatás elvét emlegeti valaki, akkor az általában csak egy megszokott elnevezés.
 									Valójában inkább a <i>szélsőértékes</i> hatás elvére gondolunk, de az sokkal csúnyábban hangzik mind magyarul, mind angolul.
-									(A pontosságra törekedőknek a \textit{stacionárius} a bevett szó.)
+									(A pontosságra törekedőknek a <i>stacionárius</i> a bevett szó.)
 								</p>
 								<p style="text-align: justify;">
 									Feltűnhetett, hogy mindkét példában az integrálás igazból egy-egy egyenes hosszának kiszámolására redukálódott.
 									Ez csak didaktikus, és mutatja a Maupertuis elv hátrányát: mást nem igazán tudtunk volna kiszámolni.
-									A probléma az integrálással van, hiszen azt nem mindig lehet elvégezni; és itt az integrálás \textbf{után} szelektáljuk ki az összes lehetséges útból az igazit.
+									A probléma az integrálással van, hiszen azt nem mindig lehet elvégezni; és itt az integrálás <b>után</b> szelektáljuk ki az összes lehetséges útból az igazit.
 									Ha kegyes a fizika, akkor létezik olyan módszer, ami ezeket megcseréli.
 								</p>
 							</div>
