--- a/teaching/elmecha/ora2.html
+++ b/teaching/elmecha/ora2.html
@@ -1,1 +1,353 @@
+<!DOCTYPE HTML>
+<!--
+	Solid State by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Elmecha-02</title>
+    	<!-- For LaTeX translation I use KeTeX -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css">
+		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js"></script>
+		<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/contrib/auto-render.min.js" onload="renderMathInElement(document.body)"></script>
+		<script>
+			document.addEventListener("DOMContentLoaded", () => {
+		    renderMathInElement(document.body, {
+				// choose exactly the pairs you want
+				delimiters: [
+					{ left: "$$", right: "$$", display: true  },
+					{ left: "$",  right: "$", display: false }
+				],
+				macros: {
+				'\\rd': '\\mathrm{d}'
+				}
+				// you can also disable or tweak other settings here
+				});
+		  });
+		</script>
 
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="../../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
+		<style>
+			.katex-display {
+				height: auto    !important;
+				max-height: none !important;
+				overflow-y: visible !important;
+			}
+		</style>
+	</head>
+	<body class="is-preload subpage teachpage">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="../elmecha.html">Elmecha</a></h1>
+						<nav>
+							<a href="#menu"></a>
+						</nav>
+					</header>
+
+				<!-- Menu -->
+					<nav id="menu">
+						<div class="inner">
+							<ul class="links">
+								<li><a href="../../index-hu.html">Home</a></li>
+								<li><a href="../../cv-hu.html">CV</a></li>
+								<li><a href="../../teaching-hu.html">Oktatás</a></li>
+							</ul>
+							<a href="#" class="close">Close</a>
+						</div>
+					</nav>
+
+
+				<!-- Wrapper -->
+					<section id="wrapper">
+
+						<section id="one" class="wrapper alt style3">
+							<div class="inner">
+								<h2 class="major">
+									2. óra &nbsp;&nbsp;&nbsp;&nbsp; <a href="02_ora.pdf" download="02_ora.pdf" class="button icon solid fa-download align-right">Letöltés</a>
+								</h2>
+								<h3>Elméleti frissítő</h3>
+	
+								<p style="text-align: justify;">
+                  A Lagrange-i mechanika kezdeteként feltettük, hogy léteznek valamilyen $\mathcal{L}$ Lagrange-függvények, amelyekből össze tudunk tákolni egy hatást
+                  $$
+                      \mathcal{S} = \int_{t_1}^{t_2} \mathcal{L}(\vec{r}(t), \dot{\vec{r}}(t)\textcolor{gray}{,t})\, \rd t
+                  $$
+                  amely ha stacionárius
+                  $$
+                      \delta \mathcal{S} = 0
+                  $$
+                  akkor a megoldások a fizikai valóságot írják le. Ezt megkövetelve, ha alkalmazzuk a funkcionális deriválás szabályait, kapunk egy szép egyenletet magára az $\mathcal{L}$ Lagrange-függvényünkre:
+                  $$
+                      \boxed{\frac{\rd}{\rd t} \frac{\partial \mathcal{L}(r(t), \dot{r}(t))}{\partial \dot{r}(t)} = \frac{\partial \mathcal{L}(r(t), \dot{r}(t))}{\partial r(t)}}
+                  $$
+                  az <b>Euler-Lagrange-egyenletet.</b> Múlt órán néztünk pár gondolkodást igénylő geometriai példát, ahol ezt a Lagrange-függvényt nekünk kellett kitalálni úgy, hogy az adott feladatot írja le.
+                  Szerencsére a továbbiakban ez könnyebb lesz.
+								</p>
+                <h3>Klasszikus mechanika</h3>
+                <p style="text-align: justify;">
+                  Térjünk át a tipikus mechanikai feladatokra. Ekkor a hatásunk alakja
+                  &&
+                      \mathcal{S} = \int \mathcal{L}(\vec{r}(t),\dot{\vec{r}}(t)) \rd t = \int \left(K(\dot{\vec{r}}, \textcolor{gray}{\vec{r}})-V(\vec{r})\right) \rd t
+                  &&
+                  mert akkor az Euler-Lagrange egy ismerős egyenletre vezet:
+                  &&
+                      \frac{\rd}{\rd t} \vec{p} = \boxed{\frac{\rd}{\rd t} \frac{\partial \mathcal{L}}{\partial \dot{\vec{r}}} = \frac{\partial \mathcal{L}}{\partial \vec{r}}} = - \nabla V(\vec{r})
+                  &&
+                  Ez hasznos, mert a kinetikus és a potenciális energiákat már ismerjük: az előbbi mindig $\frac{1}{2} m \dot{\vec{r}}^2$, a második pedig a rendszerből adódik.
+                  Ezt kihasználva tetszőleges mechanikai feladatokra fel tudjuk írni a Lagrange-függvényt a kinetikus és potenciális energiákat építőkockaként használva.
+                </p>
+							</div>
+						</section>
+
+						<section id="two" class="wrapper alt style2">
+							<div class="inner">
+								<h3>
+									2.1. példa: Csúszó ék
+								</h3>
+								<p style="text-align: justify;">
+									Első példaként vegyünk egy asztalt. Rakjunk rá egy háromszög alakú, $M$ tömegű éket, ami súrlódás mentesen tud rajta mozogni.
+                  Erre az ékre pedig rakjunk rá egy $m$ tömegű téglatestet, ami szintén súrlódás nélkül le tud csúszni rajta.
+                  Ha engedjük lecsúszni a kis téglatestet, <i>mekkora lesz az ék gyorsulása?</i>
+
+                  Kezdjük az első lépéssel:
+								</p>
+								<h4>
+									1.1.1. Mi a hatás?
+								</h4>
+								<p style="text-align: justify;">
+                  Kell nekünk a $\mathcal{L}$ Lagrange-függvényünk két része: a kinetikus és a potenciális energia.
+                  Az utóbbi itt könnyebb: ahogy csúszik lefele a téglatest, csökken a gravitációs potenciálja. Tehát:
+                  $$
+                     \Delta V =  mg \Delta h
+                  $$
+                  amit paraméterezni kell majd valahogy szépen.
+                  Addig is emlékezzünk, hogy bárhol megválaszthatjuk a nullpontját, de lefelé menve csökkenni fog.
+								</p>
+                <p style="text-align: justify;">
+                  A kinetikus energiánk már picit több tagból áll: az $m$ test is tud mozogni és az $M$ is. Tehát:
+                  $$
+                      K = \frac{1}{2}M \dot{x_1}^2 + \frac{1}{2}M \dot{y_1}^2 + \frac{1}{2} m \dot{x_2}^2 + \frac{1}{2} m \dot{y_2}^2
+                  $$
+                  Ami általánosan szép és jó, viszont elviekben még semmi nem zárja ki, hogy a kis téglatestünk egyenesen átessen a háromszögön, a nagy háromszögünk pedig az asztalon.
+                  Ehhez egy-egy \textbf{kényszert} kell kiróni: az $m$ test \textbf{kényszeresen} az ék felületén közlekedik lefelé, az $M$ test pedig egyáltalán nem mozoghat fel-le.
+								</p>
+                <p style="text-align: justify;">
+                  Ahhoz, hogy ez a kényszer teljesüljön, matekká kell fogalmazni amit szeretnénk kiróni.
+                  Kezdjük a háromszöggel: ha valami nem mozoghat fel-le, akkor
+                  $$
+                     y_1 = \text{konst.} \quad\quad  \longrightarrow \quad\quad  \dot{y_1} = 0
+                  $$
+                  A kis téglatestünk úgy közlekedik lefelé, hogy végig a háromszög élén marad. Ehhez segítségül hívjuk a \ref{fig:csuszoek2}. ábrát. Azt látjuk, hogy össze tudjuk kötni a kis téglatest $y$ irányú, $y_2$ mértékű lecsúszását azzal, hogy mennyit mozogtak $x$ irányba a testek. Kis matekkal:
+                  $$
+                      y_2 = (x_1+x_2) \tan{\varphi}
+                  $$
+                </p>
+                <p style="text-align: justify;">
+                  Ez kétrétről is hasznos lesz: egyrészt a potenciális energiába pont ezt a magasságmegváltozást kerestük:
+                  $$
+                      \Delta V = - mg y_2
+                  $$
+                  másrészt pedig be tudjuk helyettesíteni a kinetikus energiába is, mivel
+                  $$
+                      \dot{y_2} = (\dot{x_1}+\dot{x_2}) \tan{\varphi}
+                  $$
+                  Felírva tehát, a teljes Lagrange-függvény:
+                  $$
+                      \mathcal{L} = \frac{1}{2}M \dot{x_1}^2 + \frac{1}{2} m \dot{x_2}^2 + \frac{1}{2} m (\dot{x_1}+\dot{x_2})^2 \tan^2{\varphi} + mg (x_1+x_2) \tan{\varphi}
+                  $$
+                </p>
+                <h4>2.1.2. Mik a mozgásegyenletek?</h4>
+                <p style="text-align: justify;">
+                  Két testünk mozog ebben a rendszerben, amiknek az $(x_1, \dot{x_1})$ és $(x_2, \dot{x_2})$ koordinátáival felírtuk a hatást. Hogy megkapjuk a mozgásegyenleteket, egyszerűen az Euler-Lagrange egyenleteket kell felírnunk a két testre. Kezdve az elsővel:
+                  \begin{aligned}
+                      \frac{\partial \mathcal{L}}{\partial x_1}= mg \tan{\varphi} \quad \frac{\partial \mathcal{L}}{\partial \dot{x_1}}=M\dot{x_1} + m \tan^2{\varphi} (\dot{x_1}+\dot{x_2})
+                  \end{aligned}
+                  tehát az ék mozgásegyenlete:
+                  $$
+                      mg \tan{\varphi} = M \Ddot{x_1} + m \tan^2{\varphi}(\ddot{x_1}+\ddot{x_2})
+                  $$
+                  A kis téglatestünkre is fel lehet írni ugyanezeket: vegyük észre, hogy szinte teljesen szimmetrikus a Lagrange-ünk, annyi a különbség a két változó közt, hogy a kitneikus tagban más tömeg szerepel. A kis $m$ tömegű test egyenlete tehát:
+                  $$
+                      mg \tan{\varphi} = m \Ddot{x_2} + m \tan^2{\varphi}(\ddot{x_1}+\ddot{x_2})
+                  $$
+                </p>
+                <h4>2.1.3. Mi a pálya?</h4>
+                <p style="text-align: justify;">
+                  Hogy megkapjuk a trajektóriákat, meg kell oldanunk a mozgásegyenleteket.
+                  Na, ez az a lépés ami általánosságban nem lehetséges algebrailag.
+                  Szerencsére viszont léteznek feladatgyűjtemények olyan példákkal amikre igen: ez például pont megoldható.
+                  Vegyük a két mozgásegyenlet különbségét:
+                  \begin{aligned}
+                      0 &= M \Ddot{x_1} - m \Ddot{x_2} \\
+                      0 &= \frac{\rd}{\rd t} \left(p_{1,x} - p_{2,x}\right)
+                  \end{aligned}
+                  ami igazából ismerős lehet:
+                  $$
+                      p_{1,x} - p_{2,x} = \text{konst.}
+                  $$
+                  ez nem más, mint az $x$ irányú lendület megmaradása (a fordított előjelet az okozza, hogy az ék elmozdulását ellenkező irányúnak vettük fel a téglatestéhez képest).
+                  Visszaidézve az első órát, itt is láthatjuk, hogy eltolásinvariáns a rendszerünk erre az irányra, amivel ez az eredmény konzisztens.
+                </p>
+                <p style="text-align: justify;">
+                  Minden esetre, megvan a két egyenlet amit meg kell oldani. Ezeket kicsit átrendezve:
+                  \begin{aligned}
+                      mg \tan{\varphi}  - m \tan^2{\varphi}\ddot{x_2} &= (M + m \tan^2{\varphi})\ddot{x_1} \\
+                      mg \tan{\varphi} - m \tan^2{\varphi}\ddot{x_1} &= m(1 + \tan^2{\varphi})\ddot{x_2}
+                  \end{aligned}
+                  be tudjuk helyettesítni az elsőbe $\ddot{x_2}$-t, amivel
+                  \begin{aligned}
+                      (M + m \tan^2{\varphi})\ddot{x_1} &= mg \tan{\varphi}  - m \tan^2{\varphi} \frac{g \tan{\varphi} -  \tan^2{\varphi}\ddot{x_1}}{(1 + \tan^2{\varphi})} \\
+                      \left(M + m \tan^2{\varphi} - m\frac{\tan^4{\varphi}}{1 + \tan^2{\varphi}}\right)\ddot{x_1} &= mg \tan{\varphi}  - m \tan^2{\varphi} \frac{g \tan{\varphi}}{1 + \tan^2{\varphi}}
+                  \end{aligned}
+                  Vegyük észre hogy $1+\tan^2 = 1/\cos^2$, így pár szögfüggvényes egyszerűsítés után
+                  \begin{aligned}
+                      \left(M + m \tan^2{\varphi} - m\frac{\sin^4{\varphi}}{\cos^2{\varphi}}\right)\ddot{x_1} &= mg \tan{\varphi}  - m \sin^2{\varphi} g \tan{\varphi} \\
+                      \left(M + m \sin^2{\varphi}\frac{1- \sin^2{\varphi}}{\cos^2{\varphi}}\right)\ddot{x_1} &= mg \tan{\varphi} (1 - \sin^2{\varphi}) \\
+                      \left(M + m \sin^2{\varphi}\right)\ddot{x_1} &= mg \tan{\varphi} \cos^2{\varphi} \\
+                      \left(M + m \sin^2{\varphi}\right)\ddot{x_1} &= mg \cos{\varphi}\sin{\varphi} \\
+                      \ddot{x_1} &= \frac{mg \cos{\varphi}\sin{\varphi}}{M + m \sin^2{\varphi}}
+                  \end{aligned}
+                  amivel meg is válaszoltuk a kérdést: ezzel a konstans gyorsulással fog mozogni az ékünk.
+                </p>
+                <p style="text-align: justify;">
+                  Ha a mozgás időfüggésére vagyunk kíváncsiak, akkor ezt még ki kell integrálni kétszer. Emlékeztetőül
+                  \begin{aligned}
+                      \ddot{x_1} &= a_1 \\
+                      \int \ddot{x_1} \rd t &= \int a_1 \rd t \\
+                      \dot{x_1} &= a_1 t \\
+                      \int \dot{x_1} \rd t &= \int a_1 t\, \rd t \\
+                      x_1(t) &= \frac{a_1}{2} t^2 +c_1
+                  \end{aligned}
+                  A másik pedig ugyanígy, $a_2 = \frac{M}{m} a_1$ gyorsulással.
+                </p>
+							</div>
+						</section>
+
+						<section id="three" class="wrapper style3">
+							<div class="inner">
+								<h3>1.2 példa: Legnagyobb (?) hatás elve</h3>
+								<p style="text-align: justify;">
+									Nézzünk egy példát a fényre is.
+									A Fermat elv szerint a fény a legrövidebb időbe kerülő úton közlekedik, tehát az a pálya valósul meg, amelynek mentén a megtett idő minimális.
+									$$
+									\begin{aligned}
+									    \mathcal{T} = \int n(s) \rd s
+									\end{aligned}
+									$$
+									Most bebizonyítjuk, hogy ez így nem igaz, egy görbe tükör segítségével.
+								</p>
+								<p style="text-align: justify;">
+									Vegyük az kezdeti $A$ és a  végződő $B$ pontokat egy félgömb alakú tükör két végében.
+									Természetesen a legrövidebb út köztük az egyenes, de optikából tudjuk, hogy a fény tud másmerre is menni: tükröződve.
+									Vegyük fel valahol a köztes $P$ pontunkat a köríven, és paraméterezzük az ábrán látható szöggel.
+								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson1/fermat_gorbe.png" alt="Görbe törés paraméterezése" width="55%">
+								</div>
+								<p style="text-align: justify;">
+									Kis geometria után 
+									(Egyenlő $R$ szárú háromszögeink vannak, amiket meg tudunk felezni.
+									A szárszöget a $\theta$ paraméterünkből és a 90 fokból tudjuk kikombinálni, ami után egy szinusz felismerése a feladat.) 
+									a megtett útszakaszok:
+									$$
+									\begin{aligned}
+									    \overline{AP} = a = 2 R \sin{\left( \frac{\pi/2 - \theta}{2}\right)} \quad\quad \overline{PB} = b = 2 R \sin{\left( \frac{\pi/2 + \theta}{2}\right)}
+									\end{aligned}
+									$$
+									A Fermat-elvhez fordulva a legrövidebb időre törekszünk.
+									De itt most a törésmutató éppen konstans, tehát ez ekvivalens lesz a legrövidebb úttal, azaz
+									$$
+									\begin{aligned}
+										\mathcal{T} \cdot \frac{c}{n} =  \mathcal{S} = 2R \left[\sin{\left( \frac{\pi/2 - \theta}{2}\right)} + \sin{\left( \frac{\pi/2 + \theta}{2}\right)} \right]
+									\end{aligned}
+									$$
+									Ezt kell most deriválnunk $\theta$ szerint, majd nullává tennünk.
+									$$
+									\begin{aligned}
+									    \partial_\theta \mathcal{S} = -R\cos{\left( \frac{\pi/2 - \theta}{2}\right)} &+ R\cos{\left( \frac{\pi/2 + \theta}{2}\right)} = 0 \\
+									    \cos{\left( \frac{\pi/2 - \theta}{2}\right)} &= \cos{\left( \frac{\pi/2 + \theta}{2}\right)}
+									\end{aligned}
+									$$
+									Őt megoldhatjuk vizuálisan is, esetszétválasztással, vagy felhasználhatunk egy koszinuszok különbségére vonatkozó összefüggést, aminek hála
+									$$
+									\begin{aligned}
+									    \sin{\frac{\theta}{2}} = 0
+									\end{aligned}
+									$$
+								</p>
+								<p style="text-align: justify;">
+									Minden esetre a megoldásaink:
+									$$
+									\begin{aligned}
+									    \theta = 2n \pi \,, \hspace{10mm} n\in \mathbb{Z}
+									\end{aligned}
+									$$
+									Nekünk ezek közül $\theta=0$ lesz az fontos, minden más ugyanazt jelenti.
+								</p>
+								<p style="text-align: justify;">
+									Érdekes dolgot figyelhetünk meg viszont, ha megnézzük az időtartam <i>második</i> deriváltját is a minimumban.
+									$$
+									\begin{aligned}
+									    \left. \partial_\theta^2 \mathcal{T} \right|_{\theta=0}  \propto -R \left[\sin{\frac{\pi}{4}} +\sin{\frac{\pi}{4}} \right] \\
+									    \propto -R \sin{\frac{\pi}{4}}
+									\end{aligned}
+									$$
+									Ami negatív.
+									Visszaidézve a korábbi matekos tudásunkat, ez azt jelenti, hogy a megvalósuló pályánk nem is egy minimumhoz köthető.
+									Pont ellenkezőleg, egy lokális maximumhoz tartozó pályát követ ezesetben a fény.
+								</p>
+								<p style="text-align: justify;">
+									Éppen ezért, most is és a jövőben is, bármikor, ha a <i>legkisebb</i> hatás elvét emlegeti valaki, akkor az általában csak egy megszokott elnevezés.
+									Valójában inkább a <i>szélsőértékes</i> hatás elvére gondolunk, de az sokkal csúnyábban hangzik mind magyarul, mind angolul.
+									(A pontosságra törekedőknek a <i>stacionárius</i> a bevett szó.)
+								</p>
+								<p style="text-align: justify;">
+									Feltűnhetett, hogy mindkét példában az integrálás igazból egy-egy egyenes hosszának kiszámolására redukálódott.
+									Ez csak didaktikus, és mutatja a Maupertuis elv hátrányát: mást nem igazán tudtunk volna kiszámolni.
+									A probléma az integrálással van, hiszen azt nem mindig lehet elvégezni; és itt az integrálás <b>után</b> szelektáljuk ki az összes lehetséges útból az igazit.
+									Ha kegyes a fizika, akkor létezik olyan módszer, ami ezeket megcseréli.
+								</p>
+							</div>
+						</section>
+						
+
+				<!-- Footer -->
+					<section id="footer">
+						<div class="inner">
+							<h2 class="major">Elérhetőség</h2>
+							<ul class="contact">
+								<li class="icon solid fa-home">
+									ELTE TTK<br />
+									Elméleti Fizikai Tanszék<br />
+									Szoba: 6.101A
+								</li>
+							</ul>
+							<ul class="contact">
+								<li class="icon solid fa-envelope"><a href="mailto:szabolcs.kovacs.uni@gmail.com">szabolcs.kovacs.uni@gmail.com</a></li>
+							</ul>
+							<ul class="copyright">
+								<li>Hosted on GitHub Pages</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Background: teplovodoserviss from Wallpapers.com</li>
+							</ul>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="../../assets/js/jquery.min.js"></script>
+			<script src="../../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../../assets/js/browser.min.js"></script>
+			<script src="../../assets/js/breakpoints.min.js"></script>
+			<script src="../../assets/js/util.js"></script>
+			<script src="../../assets/js/main.js"></script>
+
+	</body>
+</html>
